--- a/enasan.html
+++ b/enasan.html
@@ -139,10 +139,10 @@
                     <span class="font-bold text-red-600">出発直前に、必ずご自身で最新の天気予報をご確認ください。</span>
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4">
-                    <a href="https://tenki.jp/mountain/4/23/128.html" target="_blank" rel="noopener noreferrer" class="flex-1 block text-center p-3 font-semibold text-white bg-blue-500 rounded-lg shadow hover:bg-blue-600 transition-colors">
+                    <a href="https://tenki.jp/mountain/famous100/5/24/176.html" target="_blank" rel="noopener noreferrer" class="flex-1 block text-center p-3 font-semibold text-white bg-blue-500 rounded-lg shadow hover:bg-blue-600 transition-colors">
                         恵那山の天気 (tenki.jp)
                     </a>
-                    <a href="https://tenki.jp/forecast/3/23/4820/20424/" target="_blank" rel="noopener noreferrer" class="flex-1 block text-center p-3 font-semibold text-white bg-green-500 rounded-lg shadow hover:bg-green-600 transition-colors">
+                    <a href="https://tenki.jp/forecast/3/23/4830/20407/" target="_blank" rel="noopener noreferrer" class="flex-1 block text-center p-3 font-semibold text-white bg-green-500 rounded-lg shadow hover:bg-green-600 transition-colors">
                         昼神温泉(阿智村)の天気 (tenki.jp)
                     </a>
                 </div>
@@ -433,4 +433,5 @@
     </div>
 </body>
 </html>
+
 
